deployments/kubernetes/deployment_bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bot-service-deployment
  labels:
    app: bot-service
spec:
  selector:
    matchLabels:
      app: bot-service
  replicas: 1
  template:
    metadata:
      labels:
        app: bot-service
    spec:
      containers:
        - name: bot-service
          image: julinserg/telegram_bot_service_csysbot_docker_image
