deployments/kubernetes/deployment_cloud_storage.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-storage-service-deployment
  labels:
    app: cloud-storage-service
spec:
  selector:
    matchLabels:
      app: cloud-storage-service
  replicas: 1
  template:
    metadata:
      labels:
        app: cloud-storage-service
    spec:
      containers:
        - name: cloud-storage-service
          image: julinserg/cloud_storage_service_csysbot_docker_image
