deployments/kubernetes/service_auth.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-service-service
  labels:
    app: auth-service
spec:
  selector:
    app: auth-service
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: auth-metrics
      port: 8033
      targetPort: 8033
