deployments/kubernetes/service_bot.yaml
apiVersion: v1
kind: Service
metadata:
  name: bot-service-service
  labels:
    app: bot-service
spec:
  selector:
    app: bot-service
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: bot-metrics
      port: 8011
      targetPort: 8011
