deployments/kubernetes/service_cloud_storage.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloud-storage-service-service
  labels:
    app: cloud-storage-service
spec:
  selector:
    app: cloud-storage-service
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: cloud-storage-metrics
      port: 8022
      targetPort: 8022
