deployments/kubernetes/ingress_for_test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: for-test-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /api/v1/auth-public
            pathType: Prefix
            backend:
              service:
                name: auth-service-service
                port:
                  number: 8033
          - path: /api/v1/auth-private
            pathType: Prefix
            backend:
              service:
                name: auth-service-service
                port:
                  number: 8099
          - path: /api/v1/bot-imitation
            pathType: Prefix
            backend:
              service:
                name: bot-service-service
                port:
                  number: 8011
          - path: /api/v1/cs-debug
            pathType: Prefix
            backend:
              service:
                name: cloud-storage-service-service
                port:
                  number: 8022
          - path: /images
            pathType: Prefix
            backend:
              service:
                name: image-server-service
                port:
                  number: 80
